# hackathon

./: .gitignore  README.md
.algokit/: .copier-answers.yml
projects/hackathon-contracts/: .algokit.toml  .gitignore  README.md  pyproject.toml
projects/hackathon-contracts/.algokit/: .copier-answers.yml
projects/hackathon-contracts/smart_contracts/: __main__.py
projects/hackathon-contracts/smart_contracts/backend/: pyproject.toml
projects/hackathon-contracts/smart_contracts/backend/app/: algorand.py  algorand_usdc.py  binance.py  main.py
projects/hackathon-contracts/smart_contracts/backend/app/core/: crypto.py  firebase.py  wallet.py
projects/hackathon-contracts/smart_contracts/backend/app/routers/: auth.py  paypal.py  paypal_link.py  ramp.py  tx.py  user.py  waiting_list.py
projects/hackathon-contracts/smart_contracts/backend/app/utils/: paypal.py
projects/hackathon-contracts/smart_contracts/hackathon/: contract.py  deploy_config.py  pyproject.toml
projects/hackathon-contracts/smart_contracts/hackathon/src/hackathon/: __init__.py  contract.py  deploy_config.py
projects/hackathon-frontend/: .algokit.toml  .gitignore  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
projects/hackathon-frontend/.algokit/: .copier-answers.yml
projects/hackathon-frontend/src/: App.tsx  Home.tsx  main.tsx
projects/hackathon-frontend/src/components/: AppCalls.tsx  Button.tsx  MailingList.tsx  Navbar.tsx  TxTable.tsx  app-sidebar.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  site-header.tsx
projects/hackathon-frontend/src/hooks/: useAnalytics.ts  usePaypal.ts  user.ts
projects/hackathon-frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  PayPalConnectDialog.tsx  SignUp.tsx  TransferDialog.tsx
projects/hackathon-frontend/src/styles/: App.css
projects/hackathon-frontend/src/utils/: api.ts
(+4 files in other folders)
