[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.1",
    "fastapi>=0.119.0",
    "google-cloud-firestore>=2.18",
    "pydantic>=2.12.3",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.37.0",
]
