[project]
name = "rad-hackathon-contracts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pyteal>=0.24,<0.25",
  "beaker-pyteal==1.1.1",
  "py-algorand-sdk>=2,<3",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hackathon*"]
