[project]
name = "rad-hackathon-contracts"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
  "pyteal>=0.27,<0.28",
  "algokit-utils>=4.2.2,<5",
  "py-algorand-sdk>=2,<3",
  "beaker-pyteal>=1.3,<2",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hackathon*"]
